libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapOptional-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapOptional {
	maybe_map: ({
		[key: string]: number;
	} | null);
	map_of_optionals: {
		[key: string]: (number | null);
	};
	maybe_btree: ({
		[key: string]: string;
	} | null);
	btree_of_optionals: {
		[key: string]: (number | null);
	};
}
