libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapOptional::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapOptional {
	maybe_map: ({
		[key: string]: number
	} | undefined);
	map_of_optionals: {
		[key: string]: (number | undefined)
	};
	maybe_btree: ({
		[key: string]: string
	} | undefined);
	btree_of_optionals: {
		[key: string]: (number | undefined)
	};
}
