libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapStringKey::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapStringKey {
	string_to_string: Record<string, string>;
	string_to_int: Record<string, number>;
	string_to_bool: Record<string, boolean>;
	btree_string_to_string: Record<string, string>;
	btree_string_to_int: Record<string, number>;
}
