libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__MapStructValue::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface MapStructValue {
	string_to_struct: Record<string, StructSimple>;
	int_to_struct: Record<number, StructSimple>;
	btree_string_to_struct: Record<string, StructSimple>;
	btree_int_to_struct: Record<number, StructSimple>;
}
