libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__Principal::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type Principal = {
	principalType: "actor"
} & Actor | {
	principalType: "actorGroup"
} & ActorGroup | {
	principalType: "role"
} & Role;
