libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__PrincipalId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type PrincipalId = {
	principalType: "actor"
} & ActorId | {
	principalType: "actorGroup"
} & ActorGroupId | {
	principalType: "role"
} & RoleId;
