libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__PropertyValue::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type PropertyValue = null | boolean | string | Real | PropertyValue[] | {
	[key: string]: PropertyValue
};
